Add gunicorn for deployment

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,7 @@
-flask
-scikit-learn
-pandas
-numpy
+Flask==2.3.3
+scikit-learn==1.6.1
+pandas==2.1.1
+numpy==1.26.0
+nltk==3.9.1
+joblib==1.3.2
+gunicorn==21.2.0
